@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-01T08:29:29Z",
-  "count_outdated" : 642,
-  "uniques_outdated" : 333,
-  "count" : 671,
-  "uniques" : 349,
+  "timestamp" : "2022-07-01T16:37:09Z",
+  "count_outdated" : 644,
+  "uniques_outdated" : 334,
+  "count" : 674,
+  "uniques" : 350,
   "clones" : [
-    {
-      "timestamp": "2022-06-17T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-06-18T00:00:00Z",
       "count": 3,
@@ -91,10 +84,10 @@
     },
     {
       "timestamp": "2022-07-01T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 3, 3 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ]
+      "count": 5,
+      "count_minmax": [ 3, 5 ],
+      "uniques": 3,
+      "uniques_minmax": [ 2, 3 ]
     }
   ]
 }
