@@ -1,12 +1,7 @@
 {
-  "count": 29,
-  "uniques": 4,
+  "count": 30,
+  "uniques": 5,
   "clones": [
-    {
-      "timestamp": "2022-06-17T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-06-18T00:00:00Z",
       "count": 3,
@@ -64,8 +59,8 @@
     },
     {
       "timestamp": "2022-07-01T00:00:00Z",
-      "count": 3,
-      "uniques": 2
+      "count": 5,
+      "uniques": 3
     }
   ]
 }
