@@ -1,3 +1,10 @@
+2022-07-01T16:37:09Z:
+* notice: last 14d: unq all: 5 30
+* notice: prev accum: outdated-unq outdated-all / unq all: 333 642 / 349 671
+* notice: next accum: outdated-unq outdated-all / unq all: 334 644 / 350 674
+* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +3 +5 -0 -0 / 3 5
+* notice: removed / changed dates: [2022-06-17] / [2022-07-01]
+
 2022-07-01T08:29:29Z:
 * notice: last 14d: unq all: 4 29
 * notice: prev accum: outdated-unq outdated-all / unq all: 333 642 / 347 669
